[package]
name = "testRust"
version = "0.1.0"
authors = ["liusitong <lst9527@gmail.com>"]
edition = "2020"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.52.0"
piston2d-opengl_graphics = "0.77.0"
piston2d-graphics = "0.39.0"
piston2d-touch_visualizer = "0.29.0"

[dependencies.pistoncore-sdl2_window]
version = "0.67.0"
optional = true

[dependencies.pistoncore-glfw_window]
version = "0.71.0"
optional = true

[dependencies.pistoncore-glutin_window]
version = "0.68.0"
optional = true

[features]
default = ["include_glfw"]
include_sdl2 = ["pistoncore-sdl2_window"]
include_glfw = ["pistoncore-glfw_window"]
include_glutin = ["pistoncore-glutin_window"]